Added more tests for the Agenda