@@ -7,7 +7,6 @@ import pt.ipp.isep.dei.esoft.project.domain.*;
 import pt.ipp.isep.dei.esoft.project.repository.Agenda;
 import pt.ipp.isep.dei.esoft.project.repository.Repositories;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -31,12 +30,12 @@ class AgendaControllerTest {
      */
     @BeforeEach
     void setUp() {
-        todoEntry = Repositories.getInstance().getToDoList().getEntries().getFirst();
+        todoEntry = Repositories.getInstance().getToDoList().getEntries().get(0);
         agenda = new Agenda();
         List<Vehicle> vehicles = Repositories.getInstance().getVehicleRepository().getVehicleList();
         vehicle = Collections.singletonList(vehicles.get(0));
         team = new Team(Collections.singletonList(Repositories.getInstance().getCollaboratorRepository().getCollaborators().get(0)));
-        entry = new AgendaEntry(todoEntry, team, vehicle, "1h", Status.PLANNED, new Date());
+        entry = new AgendaEntry(todoEntry, team, vehicle, "1h", new Date());
         agendaController = new AgendaController(agenda);
     }
 
